--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -3,7 +3,7 @@
 - date: 2021-06-21
   name: Introduction and Ethics
   events:
-    - name: "10:00 - 10:15	Introduction: SICSS-Bologna" (https://teams.microsoft.com/l/meetup-join/19%3ameeting_MDc3MjdmNzUtNmRkYi00NzljLTk1YmEtZWQ3YzBhMzAzOWVh%40thread.v2/0?context=%7b%22Tid%22%3a%22e99647dc-1b08-454a-bf8c-699181b389ab%22%2c%22Oid%22%3a%2205f9f09a-74b1-44e5-b9c7-87fdd303c666%22%7d)
+    - name: "10:00 - 10:15	Introduction: SICSS-Bologna" [Teams](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MDc3MjdmNzUtNmRkYi00NzljLTk1YmEtZWQ3YzBhMzAzOWVh%40thread.v2/0?context=%7b%22Tid%22%3a%22e99647dc-1b08-454a-bf8c-699181b389ab%22%2c%22Oid%22%3a%2205f9f09a-74b1-44e5-b9c7-87fdd303c666%22%7d)
     - name: "10:15 - 11:45	Ethics parts 1 & 2"
     - name: "12:30 - 13:30	'Get to know you' lunch"
     - name: "14:00 - 15:15	Intro + Small groups: [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
