--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -177,12 +177,13 @@
   name: "Day 6: Work on group projects and participate in SICSS Festival"
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-  - name: "10:00 - 10:30 Logistics and Research Speed Dating Logistics [(Slides for Instructors)](https://sicss.io/2021/materials/research-speed-dating/Speed_Dating_2021.html) (*Zoom*)"
-  - name: "10:30 - 11:45 Research Speed Dating Maximally Similar Groups (*Zoom*)"
+  - name: "10:00 - 10:15 Logistics and Research Speed Dating Logistics (*Zoom*)"
+  - name: "10:15 - 10:45 Break"
+  - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "11:45 - 12:00 Break"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A)"
   - name: "1:00 - 2:30 Break"
-  - name: "2:30 - 3:45 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
+  - name: "2:30 - 3:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
   - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*)"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) (Q&A) (slides)"
 
