--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -97,7 +97,7 @@
   name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
     - name: "11:00 - 12:00 Using images and video data for social science: Challenges and opportunities (*Zoom*) [Register here](https://forms.gle/FaBQ1afa9nNdAppw8)"
-    - name: "1:00 - 2:00 Introduction to Text Analysis in Python: A Hands-on Tutorial (*Zoom*) Registration closed"
+    - name: "1:00 - 2:00 Introduction to Text Analysis in Python: A Hands-on Tutorial (*Zoom*) (*Registration closed*)"
 
 - date: 2021-06-23
   name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
