--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -3,7 +3,7 @@
 - date: 2021-06-21
   name: Introduction and Ethics
   events:
-    - name: "10:00 - 10:15	Introduction: SICSS-Bologna" [Teams](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MDc3MjdmNzUtNmRkYi00NzljLTk1YmEtZWQ3YzBhMzAzOWVh%40thread.v2/0?context=%7b%22Tid%22%3a%22e99647dc-1b08-454a-bf8c-699181b389ab%22%2c%22Oid%22%3a%2205f9f09a-74b1-44e5-b9c7-87fdd303c666%22%7d)
+    - name: "10:00 - 10:15	Introduction: SICSS-Bologna [Teams](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MDc3MjdmNzUtNmRkYi00NzljLTk1YmEtZWQ3YzBhMzAzOWVh%40thread.v2/0?context=%7b%22Tid%22%3a%22e99647dc-1b08-454a-bf8c-699181b389ab%22%2c%22Oid%22%3a%2205f9f09a-74b1-44e5-b9c7-87fdd303c666%22%7d)"
     - name: "10:15 - 11:45	Ethics parts 1 & 2"
     - name: "12:30 - 13:30	'Get to know you' lunch"
     - name: "14:00 - 15:15	Intro + Small groups: [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
@@ -32,7 +32,7 @@
     - name: "12:30 - 13:30	Brown bag seminar: Workshop Individual Projects"
     - name: "14:00 - 15:00	Mass Collaboration"
     - name: "15:00 - 16:00	Group activity"
-    
+
 - date: 2021-06-25
   name: Mass collaboration and machine learning
   events:
@@ -42,16 +42,16 @@
     - name: "14:00-15:00	Zero Variable cost"
     - name: "15:00-15:30	3 Rs"
     - name: "15:30-16:00	Group discussion"
-    
+
 - date: 2021-06-28
-  name: Invited speakers and workshop on individual projects 
+  name: Invited speakers and workshop on individual projects
   events:
     - name: "10:00 - 12:15 Milena Tsvetkova: Studying Social Interactions and Groups Online"
     - name: "12:30 - 13:30 Brown Bag Seminar: Workshop Individual Projects"
     - name: "14:00 - 16:30 Roland Adorjani: Top-Down Management Leaves Detectable Patterns inInfluence Operation Topic Choices"
 
 - date: 2021-06-29
-  name: Invited speakers and workshop on individual projects 
+  name: Invited speakers and workshop on individual projects
   events:
     - name: "10:00 - 11:30 Cesar Hidalgo: How Humans Judge Machines"
     - name: "12:30 - 14:30 Brown Bag Seminar: Workshop Individual Projects"
@@ -59,7 +59,7 @@
     - name: "17:00 - 18:30 Rachael Tatman: Rules aren't dead: Hybrid ML and rule based systems for practical, trustworthy NLP"
 
 - date: 2021-06-30
-  name: Invited speakers and workshop on individual projects 
+  name: Invited speakers and workshop on individual projects
   events:
     - name: "10:00 - 12:15 Gian Maria Campedelli:Complex networks, AI and computational methods for terrorism research: applications and challenges"
     - name: "12:30 - 14:30 Brown Bag Seminar: Workshop  Individual Projects"
@@ -67,13 +67,13 @@
     - name: "17:00 - 18:30 Chris Albon: Machine Learning at Wikimedia?"
 
 - date: 2021-07-01
-  name: Invited speakers and workshop on individual projects 
+  name: Invited speakers and workshop on individual projects
   events:
     - name: "10:00 - 12:15 Sönke Ehret:Online Experiments and Virtual Labs: Issues, Trends, and Practical Matters"
     - name: "12:30 - 13:45 Brown Bag Seminar: Workshop Individual Projects"
 
 - date: 2021-07-02
-  name: Invited speakers and workshop on individual projects 
+  name: Invited speakers and workshop on individual projects
   events:
     - name: "10:00 - 12:15 Ridhi Kashyap: Demography and the Digital Revolution: Promises and Pitfalls of a Changing Data Ecosystem"
     - name: "12:15 - 12:30 SICSS Salutation"
