--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -181,9 +181,9 @@
   - name: "10:15 - 10:45 Break"
   - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "11:45 - 12:00 Break"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A)"
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A) (slides)"
   - name: "1:00 - 2:30 Break"
-  - name: "2:30 - 3:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
+  - name: "2:30 - 3:30 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*)"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) (Q&A) (slides)"
 
