--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -72,8 +72,8 @@
 - date: 2021-06-21
   name: (Afternoon) Form Research Groups
   events:
-    - name: "2:15 - 3:15 Research Speed Networking"
-    - name: "3:15 - 5:30 Form and Meet with Research Teams"
+    - name: "2:15 - 3:15 Research Speed Networking [Slides](https://docs.google.com/presentation/d/1kQnLN00GihPnD19vfzyVzyDGtKIaQ-M-aEJmNsoCYYk/edit?usp=sharing)"
+    - name: "3:15 - (when your group stops) Form and Meet with Research Teams"
 
 - date: 2021-06-22
   name: Work on group projects
