--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -19,7 +19,7 @@
     - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
     - name: "10:15 - 11:45 Data Collection Exercise (*In Zoom full group*)"
     - name: "11:45 - 1:00 Break"
-    - name: "1:00 - 2:15 Guest Speaker Panel: Computational Social Science in Industry with George Berry and Allison McGrath, moderated by Bernard Koch (*In Zoom full group*)"
+    - name: "1:00 - 2:15 Guest Speaker Panel: Computational Social Science in Industry with George Berry, Allison McGrath, and Grace Rowe moderated by Bernard Koch (*In Zoom full group*)"
     - name: "2:15 - 2:45 Review Data Collection Exercise"
     - name: "2:45 - 3:45 Project Time: Brainstorm project groups and ideas (*In Zoom break-out rooms*)"
     - name: "3:45 - 4:00 Debrief"
