--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -90,7 +90,7 @@
  
   name: Research Speed Dating
   events:
-    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors] (link coming soon)"
+    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors](https://tiagoventura.github.io/sicss_presentation/slides-research-speed-dating#1)"
     - name: "10:30 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"
     - name: "11:30 - 12:00 Presenting Research Ideas (Everybody)"
     - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
