--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -9,7 +9,7 @@
     - name: "10:45 - 12:00 Guest Speaker: Philipp Brandt (*In Zoom full group*)"
     - name: "12:00 - 1:00 Break"
     - name: "1:00 - 2:15 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
-    - name: "2:15 - 3:30 Project Speed Dating: Goal is to get to to know each other and brainstorm project ideas (*In Zoom breakout rooms*)"
+    - name: "2:15 - 3:30 Project Speed Dating: Goal is to get to know each other and brainstorm project ideas (*In Zoom breakout rooms*)"
     - name: "3:30 - 4:00 Group Discussion + Intro to Tomorrow's Exercise (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom (getting started with Slack, R, Q & A)"
 
