--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -147,7 +147,7 @@
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*) [(video)](https://youtu.be/njoJFSC5SlI)"
-    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (see above video)"
 
 - date: 2021-06-18
   name: "Day 5: Mass collaboration and machine learning"
