updated file extension

--- a/_data/2021/taiwan/speakers.yml
+++ b/_data/2021/taiwan/speakers.yml
@@ -6,7 +6,7 @@ Her research interests lie in national health accounts formulation and estimatio
 out-of-pocket medical spending, and patient behavior. She has been working with
 Taiwan’s National Health Insurance claims data as well as several other national
 datasets over the past ten years." 
-  image: /assets/images/ChristyPu.jpeg
+  image: /assets/images/ChristyPu.jpg
   website: 
   
 - name: Cheng-Te Li (李政德)
