--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -61,9 +61,9 @@
     - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
     - name: "10:15 - 11:00 Lecture: Text Analysis (*In Zoom full group*)"
     - name: "11:00 - 11:45 Small Group Discussions + Exercise (*In Zoom break-out room*)"
-    - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 3:00 Guest Speaker: TBD (*In Zoom break-out room*)"
-    - name: "3:00 - 4:00 Project Time (*In Zoom full group*)"
+    - name: "11:45 - 1:00 Break"
+    - name: "1:00 - 1:30 Guest Speaker: <a href="https://www.aclweb.org/anthology/2021.socialnlp-1.7/">Savannah Larimore </a> (SICSS-UW 2018) (*In Zoom full group*)"
+    - name: "1:30 - 4:00 Project Time (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2021-06-29
