--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -181,7 +181,7 @@
     - name: "**[Covid Vaccine Perception in Turkey](https://github.com/ocseckin/sicss_vaccine_project)** by Ozgur Can Seckin, Aybuke Atalay, Umut Duygu, Ege Otenen"
     - name: "**[An Analysis on Party Manifestos](https://github.com/vminvsky/political-manifestos)** by Didar Tutan, Cigdem Unal, Venia Veselovsky, Oguzhan Izmir"
     - name: "**Ideology and perception of conflict in the U.S. over the Palestine issue** by Selim Yaman, Ahmet Yusuf Aydın, M. Fuat Kına"
-    - name: "**Fear and Loathing during the Pandemic: the changes in what we listen to in response to macroeconomic indicators** by Elif Ece Sozer, Yasemin Taskin Alp, Hakan Ozalp"
+    - name: "**[Fear and Loathing during the Pandemic: the changes in what we listen to in response to macroeconomic indicators](https://github.com/Hakozalp/SICSS_Music_Project)** by Elif Ece Sozer, Yasemin Taskin Alp, Hakan Ozalp"
     
 
  
