--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -102,4 +102,20 @@
 - date: 2021-06-25
   name: Present group projects
   events: 
-    - name: Schedule to be posted
+    - name: "(Optional) 9:00 - 10:15am Main Session will be open for any final group preparations and/or questions."
+    - name: "10:15 - 10:25 Welcome"
+    - name: "10:25 - 10:40 Group Presentation"
+    - name: "10:40 - 10:55 Group Presentation"
+    - name: "10:55 - 11:10 Group Presentation"
+    - name: "11:10 - 11:25 Group Presentation"
+    - name: "11:25 - 11:40 Group Presentation"
+    - name: "11:40 - 11:55 Group Presentation"
+    - name: "12:00 - 1:30 Lunch Break and Optional Small Group Networking"
+    - name: "1:40 - 1:55 Group Presentation"
+    - name: "1:55 - 2:10 Group Presentation"
+    - name: "2:10 - 2:25 Group Presentation"
+    - name: "2:25 - 2:40 Group Presentation"
+    - name: "2:40 - 3:00 Closing"
+
+
+
