--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -142,7 +142,7 @@
     - name: "10:15 - 10:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md) (*Zoom*) (video)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) (video not available) [(slides)](https://drive.google.com/file/d/19-VJ6GbOihLLVHMr5o8mV19D6EjCju75/view?usp=sharing) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) (video and Q&A not available) [(slides)](https://drive.google.com/file/d/19-VJ6GbOihLLVHMr5o8mV19D6EjCju75/view?usp=sharing) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
@@ -204,7 +204,7 @@
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:30 Logistics (*Zoom*) (video)"
   - name: "10:30 - 12:00 Work on group projects"
-  - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video)"
+  - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video not available)"
   - name: "1:00 - 4:00 Work on group projects"
   - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/IoOQZUa_Akw) (Q&A) (slides)"
 
