--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -37,12 +37,12 @@
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2021-06-24
-  name: Project Day
+  name: Introduction to Text Analysis
   events:
-    - name: "10:00 - 10:30 CSS Skills Workshop on Bash (*In Zoom full group*)"
-    - name: "10:30 - 11:45 Project Time (*In Zoom break-out room*)"
-    - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 2:00 Guest Speaker: TBD (*In Zoom full group*)"
+    - name: "10:00 - 11:00 Lecture: The Landscape of Approaches to Text Analysis (*In Zoom full group*)"
+    - name: "11:00 - 11:30 CSS Skills Workshop on Bash (*In Zoom full group*)"
+    - name: "11:30 - 1:00 Break"
+    - name: "1:00 - 2:00 Text Analysis Discussion and Activity (*In Zoom break-out room*)"
     - name: "2:00 - 4:00 Project Time and Project Check in with an Organizer (*In Zoom break-out room*)"
   
 - date: 2021-06-25
@@ -56,7 +56,7 @@
     - name: "2:00 - 4:00  Project Time (*In Zoom full group*)"
 
 - date: 2021-06-28
-  name: Introduction to Text Analysis + Unsupervised Machine-Learning
+  name: Text Analysis + Unsupervised Machine-Learning
   events:
     - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
     - name: "10:15 - 11:30 Lecture: Text Analysis (*In Zoom full group*)"
@@ -67,7 +67,7 @@
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2021-06-29
-  name: Text Analysis Activity
+  name: Text Analysis + Unsupervised Machine-Learning
   events:
     - name: "10:00 - 10:30 CSS Skills Workshop on GitHub (*In Zoom full group*)"
     - name: "10:30 - 11:45 Text Analysis Activity (*In Zoom break-out room*)"
