Update people descriptions.

--- a/_data/2021/helsinki/participants.yml
+++ b/_data/2021/helsinki/participants.yml
@@ -43,6 +43,7 @@
   website: https://oksanen.xyz/
 
 - name: Sina Özdemir
+  image: /assets/images/helsinki21-sina-ozdemir.jpeg
   bio: "PhD candidate in Political Science. I am interested in how social and political values are discursively created and contested. Specifically, what do people find acceptable and proper for political authorities. I try to incorporate automated and manual analysis as well as quantitative and qualitative methods in my research."
   website: https://github.com/SinaOzdemir
 
