[Stellenbosch] Fix Image Exensions

--- a/_data/2021/stellenbosch/people.yml
+++ b/_data/2021/stellenbosch/people.yml
@@ -30,10 +30,10 @@ participants:
       image: /assets/images/su_2021_bogatyrev.jpg
       bio: "Konstantin Bogatyrev is a PhD student in Public Policy at Bocconi University in Milan. He majored in economics at Lomonosov Moscow State University, followed by a master’s at Higher School of Economics in Moscow and Humboldt University, Berlin. In 2019, he started his PhD to pursue a research career."
     - name: Annie Burger
-      image: /assets/images/su_2021_burger.jpg
+      image: /assets/images/su_2021_burger.png
       bio: "Annie Burger is a PhD candidate at the Department of Afrikaans and Dutch at the Faculty of Arts and Social Sciences at Stellenbosch University. The focus of her PhD study is the effective use of plain language. She has experience in information design and learning design."
     - name: Mennatullah Hendawy
-      image: /assets/images/su_2021_hendawy.jpg
+      image: /assets/images/su_2021_hendawy.png
       bio: "An assistant lecturer at the Department of Urban Planning and Design in Ain Shams University in Cairo, Egypt, and a Ph.D. Candidate at the Chair of Urban Design, TU Berlin who submitted her dissertation. She is a member of the urban AI network and the project is relevant to her Ph.D. thesis on the mediatization of planning and how different forms of media become a question of social and spatial justice.  Mennatullah’s role in the project is social justice and urban communication expert and post-doctoral researcher with previous experience of teaching Cairo’s urban planners."
     - name: Eric Magale
       image: /assets/images/su_2021_magale.jpg
