--- a/_data/2021/stellenbosch/schedule.yml
+++ b/_data/2021/stellenbosch/schedule.yml
@@ -77,9 +77,5 @@
 
 - date: 2021-07-09
   events:
-    - name: "What, Why, and Which Experiments? [Video](https://youtube.com//watch?v=hKiKiWbeD6I). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day6-experiments/01-what-why-which-experiments.pdf)."
-    - name: "Moving Beyond Simple Experiments. [Video](https://www.youtube.com/watch?v=cYyu5Ex0twE). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day6-experiments/02-moving-beyond-simple-experiments.pdf)"
-    - name: "Four Strategies for Making Experiments Happen. [Video](https://youtube.com//watch?v=KDLFigGDORY). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day6-experiments/03-making-it-happen.pdf)."
-    - name: "Zero Variable Cost Data and Musiclab. [Video](https://youtube.com//watch?v=rAGMpZuU3RU). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day6-experiments/04-zero-variable-cost.pdf)."
-    - name: "3Rs. [Video](https://youtube.com//watch?v=aQPce-WgJBY). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day6-experiments/05-three-rs.pdf)."
+    - name: "**TBC** Lightning Talks"
     - name: "**15:00-17:00** Closure and Thanks"
