--- a/_data/2021/stellenbosch/schedule.yml
+++ b/_data/2021/stellenbosch/schedule.yml
@@ -77,5 +77,5 @@
 
 - date: 2021-07-09
   events:
-    - name: "**TBC** Lightning Talks"
+    - name: "**Timing TBC** Lightning Talks"
     - name: "**15:00-17:00** Closure and Thanks"
