--- a/_data/2021/stellenbosch/schedule.yml
+++ b/_data/2021/stellenbosch/schedule.yml
@@ -74,6 +74,7 @@
     - name: "Computer-Administered Interviews. [Video](https://www.youtube.com/watch?v=HT1bQ3Bh79w). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2021/materials/day4-surveys/03-computer-administered-interviews.pdf)."
     - name: "Combining Surveys and Big Data. [Video](https://www.youtube.com/watch?v=_vecQs7aB6o). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2021/materials/day4-surveys/04-combining-surveys-and-big-data.pdf)."
     - name: "Additions and Extension. [Video](https://www.youtube.com/watch?v=97gahprIIOI). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2021/materials/day4-surveys/05-survey-additions-extensions.pdf)."
+    - name: "_Exercises available [here]()._"
 
 - date: 2021-07-09
   events:
