Update Markus Himanen's photo and bio.

--- a/_data/2021/helsinki/participants.yml
+++ b/_data/2021/helsinki/participants.yml
@@ -1,4 +1,6 @@
-- name: Markus	Himanen
+- name: Markus Himanen
+  image: /assets/images/helsinki21-markus-himanen.jpg
+  bio: "Markus Himanen (M.Soc.Sc in political science) is a doctoral student in sociology at the University of Helsinki and works as a researcher in the project Social exclusion, polarization and security in the Nordic welfare state (SEPOS) that is funded by the Nordforsk. Himanen’s research interest include racial and ethnic discrimination in policing, ethnic profiling, internal immigration policing, and non-discrimination training in the public security sector."
 
 - name: Johannes	Johansson
   image: /assets/images/helsinki21-johannes-johansson.png
