--- a/_data/2021/tokyo/participants.yml
+++ b/_data/2021/tokyo/participants.yml
@@ -18,7 +18,7 @@
   bio: "Kyle Nolla is a PhD student in Psychology from Northwestern University. Her dissertation focuses on skill learning and performance in women esports players. She will be joining Northwestern's Medical Social Sciences division as a postdoc in Fall 2021 to continue studying cognition and stress using computational social science methods. "
 
 - name: Je Hoon Chae
-  image: /assets/images/Je_Hoon_Chae.jpeg
+  image: /assets/images/Je_Hoon_Chae.png
   bio: "Je Hoon Chae is a postmaster researcher in Communication at Yonsei University. His primary research interests are political communication, political polarization, public opinion, and applying computational methods to causal inference. He earned both M.S. and B.A. degree in Communication at Yonsei University."
   website: https://jehoonchae.github.io/
 
@@ -50,7 +50,7 @@
   bio: "Yu Funakoshi is an assistant professor at the Department of Tokyo Metropolitan Health Policy Advisement, Tokyo Medical and Dental University (TMDU), Japan. His research interests are focused on social determinants of health and health communication. He obtained a Ph.D.  from TMDU, MPH from Boston University, and MD from Gunma University."
 
 - name: Daisuke Nakama
-  image: /assets/images/Daisuke_Nakama.jpeg
+  image: /assets/images/Daisuke_Nakama.png
   bio: "Daisuke Nakama is a Chief Researcher at Recruit Management Solutions Co., Ltd., and is pursuing a PhD in social psychology at University of Tokyo. With 10+ years experiences in business practices in financial management, his current interests fall into the organizational management where academic knowledge and business practices are integrated. "
 
 - name: Ramesh Krishnan
