update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -181,7 +181,7 @@
   - name: "10:15 - 10:45 Break"
   - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "11:45 - 12:00 Break"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A) (slides)"
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A)"
   - name: "1:00 - 2:30 Break"
   - name: "2:30 - 3:30 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "3:30 - 3:45 Break"
@@ -224,8 +224,8 @@
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:30 Logistics (video)"
   - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) (video)"
-  - name: "12:00 - 1:30 Final work on group projects"
-  - name: "1:30 - 4:30 Present group projects (*Zoom*) (video)"
+  - name: "12:00 - 12:30 Break"
+  - name: "12:30 - 4:30 Present group projects (*Zoom*) (video)"
   - name: "4:30 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) (video)"
   - name: "5:00 - 5:15 Break"
   - name: "5:15 - 5:45 Debrief and conclusion"
