--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -96,11 +96,11 @@
 - date: 2021-06-25
   name: "<b>Group Projects Presentations</b>"
   events:
-    - name: "13.00 - 13.45 Group Project Presentation (*Zoom*)"
+    - name: "13.00 - 13.45 Group Project Presentation: Beyond courts - In search for a climate litigation effect, Anna Sekula, Katharina Luckner, Anna Kovács (*Zoom*)"
     - name: "13.45 - 14.00 Break"
-    - name: "14.00  - 14.45 Group Project Presentation (*Zoom*)"
+    - name: "14.00  - 14.45 Group Project Presentation: Eat the Poor? Economic Status of Involved States and the Outcomes of Investment Disputes, Abdurrahman Erol, Wojciech Giemza, Sandra Hahn (*Zoom*)"
     - name: "14.45 - 15.00 Break"
-    - name: "15.00 - 15.45 Group Project Presentation (*Zoom*)"
+    - name: "15.00 - 15.45 Group Project Presentation: npacking Transparency in EU Law: A Computation Exploratory Analysis (1952-2019), A. Davola, G. De Gregorio, N. Kolt, L. Martínez Lorenzo, J. Strycharz, Ł. Szoszkiewicz, A. Zarra (*Zoom*)"
     - name: "15.00 - 16.00 Break"
-    - name: "16.00 - 16.45 Group Project Presentation (*Zoom*)"
+    - name: "16.00 - 16.45 Group Project Presentation: *Title TBA* Siyun Jiang (*Zoom*)"
     - name: "16.45 - 17.15 Closing remarks (*Zoom*)"
