--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -102,5 +102,5 @@
     - name: "14.45 - 15.00 Break"
     - name: "15.00 - 15.45 Group Project Presentation: npacking Transparency in EU Law: A Computation Exploratory Analysis (1952-2019), A. Davola, G. De Gregorio, N. Kolt, L. Martínez Lorenzo, J. Strycharz, Ł. Szoszkiewicz, A. Zarra (*Zoom*)"
     - name: "15.00 - 16.00 Break"
-    - name: "16.00 - 16.45 Group Project Presentation: *Title TBA* Siyun Jiang (*Zoom*)"
+    - name: "16.00 - 16.45 Group Project Presentation: Analyzing Judicial Outcomes of Corporate Disputes in China: Statistical and Computational Methods, Siyun Jiang (*Zoom*)"
     - name: "16.45 - 17.15 Closing remarks (*Zoom*)"
