--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -19,7 +19,7 @@
   website: https://danielnielson.com/
 
 - name: Hana Shepherd
-  bio: "Hana Shepherd is Assistant Professor of Sociology at Rutgers University."
+  bio: "Hana Shepherd is Associate Professor of Sociology at Rutgers University."
   image: /assets/images/hanashepherd.jpg
   website: https://sociology.rutgers.edu/people/faculty/core-department-faculty/504-shepherd-hana
 
