--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -181,22 +181,22 @@
   - name: "10:15 - 10:45 Break"
   - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "11:45 - 12:00 Break"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A)"
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) [(Q&A)](https://youtu.be/1EWSzqOG4oY)"
   - name: "1:00 - 2:30 Break"
   - name: "2:30 - 3:30 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "3:30 - 3:45 Break"
-  - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*) (video)"
-  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) (Q&A)"
+  - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*) [(video)](https://youtu.be/N_uUx66jyHs)"
+  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) [(Q&A)](https://youtu.be/zfBwenC3miQ)"
 
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-  - name: "10:00 - 10:15 Logistics (*Zoom*) (video)"
+  - name: "10:00 - 10:15 Logistics (*Zoom*) [(video)](https://youtu.be/9IRfltpb5C8)"
   - name: "10:15 - 12:00 Work on group projects"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) (Q&A) (slides)"
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) [(Q&A)](https://youtu.be/XX2GRc0SgJM) (slides)"
   - name: "1:00 - 4:00 Work on group projects" 
-  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/lLVOGLDK97o) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/lLVOGLDK97o) [(Q&A)](https://youtu.be/DUOl-bGotyc) (slides)"
 
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
