update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -223,7 +223,7 @@
   events:
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:30 Logistics (video)"
-  - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) (video)"
+  - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) (private video) "
   - name: "12:00 - 12:30 Break"
   - name: "12:30 - 4:30 Present group projects (*Zoom*) (video)"
   - name: "4:30 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) (video)"
