update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -182,7 +182,7 @@
   - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "11:45 - 12:00 Break"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) [(Q&A)](https://youtu.be/1EWSzqOG4oY)"
-  - name: "1:00 - 2:30 Break"
+  - name: "1:00 - 2:30 Break [(short video before starting)](https://youtu.be/jUc0gURyxU0)"
   - name: "2:30 - 3:30 Round 1-6 (ten minutes each) (*Zoom*)"
   - name: "3:30 - 3:45 Break"
   - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*) [(video)](https://youtu.be/N_uUx66jyHs)"
