--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -50,7 +50,7 @@
   name: ""
   events:
     - name: "8:30 - 9:55 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
-    - name: "10:00 - 11:00 Participants' research presentation: Anfan, Anmol, Guang, Zhuo"
+    - name: "10:00 - 11:00 Participants' research presentation: Anfan, Anmol, Guang, Zhuo, Zhuowen"
     - name: "21:00 - 23:00 YY Ahn speaks at SICSS Beijing (Understanding texts and networks with neural language models) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_gA5RDulWRcCZHipc3k4Zrw))"
 
 - date: 2021-06-22
@@ -71,7 +71,7 @@
   name: ""
   events:
     - name: "8:30 - 9:25 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
-    - name: "9:30 - 11:00 Participants' research presentation: Xiduo, Yanni, Yingdan, Yiyan, Xiangyu"
+    - name: "9:30 - 11:00 Participants' research presentation: Xiduo, Yanni, Yingdan, Yiyan, Xiangyu, Yang"
     - name: "21:00 - 23:00 Morgan Frank speaks at SICSS Beijing (Universal resilience patterns in labor markets) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_jEWUwdO6TEKSzmgOj1o4Wg))"
 
 - date: 2021-06-25
