--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -107,12 +107,12 @@
     - name: "10:25 - 10:40 Group Presentation: Social Butterflies"
     - name: "10:40 - 10:55 Group Presentation: Knights Fighting Bots"
     - name: "10:55 - 11:10 Group Presentation: Propaganda"
-    - name: "11:10 - 11:25 Group Presentation: Text about Family"
+    - name: "11:10 - 11:25 Group Presentation: All about Text"
     - name: "11:25 - 11:40 Group Presentation: Mining Equity"
     - name: "11:40 - 11:55 Group Presentation: The Storm"
     - name: "12:00 - 1:30 Lunch Break and Optional Small Group Networking"
     - name: "1:40 - 1:55 Group Presentation: The TikTok Group"
-    - name: "1:55 - 2:10 Group Presentation: Vaccine Hesitancy"
+    - name: "1:55 - 2:10 Group Presentation: Crabbie Cakes"
     - name: "2:10 - 2:25 Group Presentation: Pretty Fly for Some Syllabi"
     - name: "2:25 - 2:40 Group Presentation: No Stereotype Left Behind"
     - name: "2:40 - 3:00 Closing"
