--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -106,7 +106,7 @@
     - name: "10:15 - 10:25 Welcome"
     - name: "10:25 - 10:40 Group Presentation: Social Butterflies"
     - name: "10:40 - 10:55 Group Presentation: Knights Fighting Bots"
-    - name: "10:55 - 11:10 Group Presentation: Propaganda"
+    - name: "10:55 - 11:10 Group Presentation: Si-NO to Foreign Propaganda"
     - name: "11:10 - 11:25 Group Presentation: All about Text"
     - name: "11:25 - 11:40 Group Presentation: Mining Equity"
     - name: "11:40 - 11:55 Group Presentation: The Storm"
