--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -42,7 +42,7 @@
     - name: "10:00 - 11:00 Lecture: The Landscape of Approaches to Text Analysis (*In Zoom full group*)"
     - name: "11:00 - 11:30 CSS Skills Workshop on Bash (*In Zoom full group*)"
     - name: "11:30 - 1:00 Break"
-    - name: "1:00 - 2:00 Text Analysis Discussion and Exercise (*In Zoom break-out room*)"
+    - name: "1:00 - 2:00 Text Analysis Exercise (*In Zoom break-out room*)"
     - name: "2:00 - 4:00 Project Time and Project Check in with an Organizer (*In Zoom break-out room*)"
   
 - date: 2021-06-25
@@ -53,7 +53,7 @@
     - name: "11:00 - 11:45 Small Group Discussions (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 2:00 Group Discussion + Exercise (*In Zoom break-out room*)"
-    - name: "2:00 - 4:00  Project Time (*In Zoom full group*)"
+    - name: "2:00 - 4:00  Project Time (*In Zoom break-out room*)"
 
 - date: 2021-06-28
   name: Text Analysis + Unsupervised Machine-Learning
