--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -197,3 +197,9 @@ participants:
     bio: "Kunru Zou is a doctoral student in finance at the Nanyang Business School in Nanyang Technological University. His research interest include corporate finance, privatization, corporate social responsibility. Methodologically, he is interested in econometric analysis with geographical variation. He is also interested in textual analysis and machine learning. Before coming to Singapore, he received his bachelor degree in Maths and master degree in Finance both from Sun Yat-sen University."
     
 
+heros:
+  title: Sponsors
+  people:
+  - name: MIT Connection Science
+    website: https://connection.mit.edu/
+  
