update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -183,7 +183,7 @@
   - name: "11:45 - 12:00 Break"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) [(Q&A)](https://youtu.be/1EWSzqOG4oY)"
   - name: "1:00 - 2:30 Break [(short video before starting)](https://youtu.be/jUc0gURyxU0)"
-  - name: "2:30 - 3:30 Round 1-6 (ten minutes each) (*Zoom*)"
+  - name: "2:30 - 3:30 Round 7-12 (ten minutes each) (*Zoom*)"
   - name: "3:30 - 3:45 Break"
   - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*) [(video)](https://youtu.be/N_uUx66jyHs)"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) [(Q&A)](https://youtu.be/zfBwenC3miQ)"
@@ -228,4 +228,4 @@
   - name: "12:30 - 4:30 Present group projects (*Zoom*) (video)"
   - name: "4:30 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica (*Zoom*) (video)"
   - name: "5:00 - 5:15 Break"
-  - name: "5:15 - 5:45 Debrief and conclusion"
+  - name: "5:15 - 5:45 SICSS-Howard/Mathematica Final Debrief and conclusion"
