--- a/_data/2021/taiwan/schedule.yml
+++ b/_data/2021/taiwan/schedule.yml
@@ -4,20 +4,20 @@
   name: Introduction and Ethics
   events:
     - name: "9:30 - 10:35 Introduction and Opening" 
-    - name: "10:55 - 12:00 Ethics: Discussion Activity [Lesson plan (participants)] (link coming soon))"
+    - name: "10:55 - 12:00 Ethics: Discussion Activity [Lesson plan (participants)] (https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md))"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 15:00 Guest Speaker 1 + Q&A"
+    - name: "13:00 - 15:00 The Promise of Text Mining By Prof. Hsuan-lei Shao 邵軒磊	[slides](https://drive.google.com/file/d/1ni4At1B2tyalo5N-ZKO21mo5gCbnOvY2/view)"
     - name: "15:00 - 15:15 Debrief and Logistics"
     
 
 - date: 2021-06-29
   name: API & Automated Text Analysis
   events:
-    - name: "9:30 - 10:35 Watch one recorded session of SICSS festival, followed by group discussion" 
+    - name: "9:30 - 10:35 Watch [2020 SICSS Festival talk on computational and digital demography] (https://www.youtube.com/watch?v=BueR-DPy484&list=PL9UNgBC7ODr6eZkwB6W0QSzpDs46E8WPN), followed by group discussion" 
     - name: "10:55 - 12:00 Application Programming Interfaces Group Activity"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
     - name: "13:00 - 14:30 An Introduction to Text Analysis Text Analysis Basics"
-    - name: "14:30 - 15:00 Text Analysis: Discussion Activity"
+    - name: "14:30 - 15:00 Text Analysis: Activity [Lesson plan](https://sicss.io/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html)"
     - name: "15:00 - 15:15 Debrief and Logistics"
     
 - date: 2021-06-30
@@ -26,25 +26,25 @@
     - name: "9:30 - 10:35 Screen scraping/crawler exercise - brainstorming" 
     - name: "10:55 - 12:00 Screen scraping/crawler exercise - prototyping"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 15:00 Guest Speaker 2 + Q&A"
+    - name: "13:00 - 15:00 Speaker Session: Hsuan-Wei Lee"
     - name: "15:00 - 15:15 Debrief and Logistics"
     
 - date: 2021-07-01
   name: Surveys in the Digital Age
   events:
-    - name: "9:30 - 10:35 Probability and Non-Probability Sampling" 
-    - name: "10:55 - 12:00 Probability and Non-Probability Sampling"
+    - name: "9:30 - 10:35 Probability and Non-Probability Sampling; [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md)" 
+    - name: "10:55 - 12:00 Probability and Non-Probability Sampling; [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md)"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 15:00 Guest Speaker 3 + Q&A"
+    - name: "13:00 - 15:00 Speaker Session: Christy Pu"
     - name: "15:00 - 15:15 Debrief and Logistics"
 
 - date: 2021-07-02
   name: Experiment & Research Pairing Activity
   events:
     - name: "9:30 - 10:35 Group exercise brainstorming" 
-    - name: "10:55 - 12:00 Watch another recorded session of SICSS festival, followed by group discussion"
+    - name: "10:55 - 12:00 Flash Talk (7 min + 7 min Q&A) from Participants"
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 14:00 Research Pairing Activity 1"
+    - name: "13:00 - 14:00 Research Pairing Activity 1 [slides](https://sicss.io/2021/materials/research-speed-dating/Speed_Dating_2021.html#/11)"
     - name: "14:00 - 15:00 Project Discussion"
     - name: "15:00 - 15:15 Debrief and Logistics"
     
@@ -62,10 +62,9 @@
 - date: 2021-07-06
   name: Research Project + Speaker Session
   events:
-    - name: "9:30 - 12:00 Research Project" 
+    - name: "10:00 - 12:00 Speaker Session: Cheng-Te Li" 
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 15:00 Guest Speaker 4 + Q&A"
-    - name: "15:15 - 16:00 Research Project"  
+    - name: "13:00 - 16:00 Research Project"
 
 - date: 2021-07-07
   name: Research Project
@@ -80,13 +79,13 @@
   events:
     - name: "9:30 - 12:00 Research Project" 
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
-    - name: "13:00 - 15:00 Guest Speaker 5 + Q&A"
+    - name: "13:00 - 15:00 Speaker Session: Tzu-Ting Yang"
     - name: "15:15 - 16:00 Research Project" 
 
 - date: 2021-07-09
-  name: Research Project
+  name: Research Project Presentation Day
   events:
-    - name: "9:30 - 10:45 Research Project" 
+    - name: "9:30 - 10:45 Presentation" 
     - name: "10:55 - 12:00 Presentation" 
     - name: "12:00 - 13:00 Lunch & optional small group discussion"
     - name: "13:00 - 15:00 Presentation"
