--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -16,7 +16,7 @@
     - name: "15:45 - 16:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf), based on the pre-recorded lectures [Day 1](https://sicss.io/curriculum) or 'Ethics' chapter in the [Bit-by-Bit book by Matthew Salganik](https://www.bitbybitbook.com/). [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md), [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_instructor.md) (*Zoom*)"
     - name: "16:45 - 17:15 Whole group debrief about the case study (*Zoom*)"
     - name: "17:15 - 17:30 Break"
-    - name: "17:30 - 18:30 Ivan Smirnov. Common pitfalls in quantitative research. [Slides](https://www.dropbox.com/s/biy3c4zwd8llqqc/Common%20pitfalls%20in%20quantitative%20research.pdf?dl=0) [Video]() (*Zoom*)"
+    - name: "17:30 - 18:30 Ivan Smirnov. Common pitfalls in quantitative research. [Slides](https://www.dropbox.com/s/biy3c4zwd8llqqc/Common%20pitfalls%20in%20quantitative%20research.pdf?dl=0) [Video](https://youtu.be/2M5ZqgIb7_s) (*Zoom*)"
     - name: "19:00 - 19:15 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-15
