--- a/_data/2021/tokyo/participants.yml
+++ b/_data/2021/tokyo/participants.yml
@@ -16,9 +16,10 @@
 - name: Kyle Nolla
   image: /assets/images/Kyle_Nolla.jpeg
   bio: "Kyle Nolla is a PhD student in Psychology from Northwestern University. Her dissertation focuses on skill learning and performance in women esports players. She will be joining Northwestern's Medical Social Sciences division as a postdoc in Fall 2021 to continue studying cognition and stress using computational social science methods. "
+  website: https://twitter.com/KyleNolla
 
 - name: Je Hoon Chae
-  image: /assets/images/Je_Hoon_Chae.png
+  image: /assets/images/Je_Hoon_Chae.jpeg
   bio: "Je Hoon Chae is a postmaster researcher in Communication at Yonsei University. His primary research interests are political communication, political polarization, public opinion, and applying computational methods to causal inference. He earned both M.S. and B.A. degree in Communication at Yonsei University."
   website: https://jehoonchae.github.io/
 
@@ -50,10 +51,14 @@
   bio: "Yu Funakoshi is an assistant professor at the Department of Tokyo Metropolitan Health Policy Advisement, Tokyo Medical and Dental University (TMDU), Japan. His research interests are focused on social determinants of health and health communication. He obtained a Ph.D.  from TMDU, MPH from Boston University, and MD from Gunma University."
 
 - name: Daisuke Nakama
-  image: /assets/images/Daisuke_Nakama.png
+  image: /assets/images/Daisuke_Nakama.jpeg
   bio: "Daisuke Nakama is a Chief Researcher at Recruit Management Solutions Co., Ltd., and is pursuing a PhD in social psychology at University of Tokyo. With 10+ years experiences in business practices in financial management, his current interests fall into the organizational management where academic knowledge and business practices are integrated. "
 
 - name: Ramesh Krishnan
   image: /assets/images/Ramesh_Krishnan.jpeg
   bio: "Ramesh is a 2nd year DBA student at Hitotsubashi University's graduate school of business administration. His interests are broadly in the Sociology of Emotions, and he takes a more than healthy interest in understanding the antecedents and consequents of Shame in organizations. He is currently working towards a dissertation in this area. He has a prior MBA and Masters in Advertising degrees, and he has worked as a marketing manager for Fortune 500 companies in India."
   website: www.linkedin.com/in/ramesh-krishnan-tokyo
+
+ - name: Keita Suzuki
+  image: /assets/images/Keita_Suzuki.jpeg
+  bio: "Keita Suzuki is a PhD Student in University of Tokyo, department of social psychology. His current research focuses on people's lay belief in malleability of human nature. He will be joining Complex Human Data Hub in University of Melbourne as a guest researcher to study how maintenance of stereotype through social transmission is affected by those beliefs."
