update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -204,7 +204,20 @@
   - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:30 Logistics (*Zoom*) (video)"
   - name: "10:30 - 12:00 Work on group projects"
-  - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video not available)"
+  - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video not available)
+     
+     - Lauren Amos, Senior Researcher
+     
+     - Naihobe Gonzalez, Senior Researcher
+     
+     - Cleo Jacobs Johnson, Senior Researcher
+     
+     - Otis Jennings, Principal Data Scientist
+     
+     - Paul Shattuck, Senior Fellow
+     
+     - Shaun N. Stevenson, Research Associate"
+     
   - name: "1:00 - 4:00 Work on group projects"
   - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/IoOQZUa_Akw) (Q&A) (slides)"
 
