--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -103,12 +103,12 @@
 - date: 2021-06-23
   name: Roundtable and Work on group projects (optional)
   events: 
-    - name: "Roundtable: 10:00 - 12:00: Computational Social Science in the Academia - With Ernesto Calvo (ilCSS-UMD), Rochelle Terman (UChicago), and Marco Aurélio Ruediger(FGV-DAPP)"
+    - name: "Roundtable: 10:00 - 12:00: Computational Social Science in the Academia - With Ernesto Calvo (ilCSS-UMD), and Rochelle Terman (UChicago)"
 
 - date: 2021-06-24
   name: Roundtable and Work on group projects (optional)
   events:
-    - name: "10:00 - 12:00 - Roundtable:  Computational Social Science and the Industry - With Daniel Mariani (Folha de Sao Paulo), Vera Cabral (Education Director, Microsoft Brasil), and Marcelo Soares (Lagom Data)"
+    - name: "10:00 - 12:00 - Roundtable:  Computational Social Science and the Industry - With Daniel Mariani (Folha de Sao Paulo), and Henrique Lorea (PicPay)"
  
     
 - date: 2021-06-25
