--- a/_data/2021/fgv-dapp-brazil/speakers.yml
+++ b/_data/2021/fgv-dapp-brazil/speakers.yml
@@ -25,7 +25,7 @@
   website: http://rochelleterman.com/
  
 - name: Fernanda Scovino
-  image: /assets/images/scovino.jpg
+  image: /assets/images/scovino.jpeg
   bio: "Fernanda Scovino é cofundadora da Base dos Dados e trabalha como Coordenadora Técnica de Governança de Dados na Prefeitura do Rio de Janeiro. Atualmente é também conselheira executiva do Laboratório de Inovação em Políticas Públicas e membro do GT da Sociedade Civil para Governo Aberto da CGU. Formada em Matemática Aplicada pela FGV-EMAp, trabalhou com ciência de dados na Impulso-gov, Elogroup e CTS/FGV."
  
 - name: Cecilia Olliveira
