--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -108,7 +108,7 @@
     - name: "10:40 - 10:55 Group Presentation: Knights Fighting Bots"
     - name: "10:55 - 11:10 Group Presentation: Si-NO to Foreign Propaganda"
     - name: "11:10 - 11:25 Group Presentation: All about Text"
-    - name: "11:25 - 11:40 Group Presentation: Mining Equity"
+    - name: "11:25 - 11:40 Group Presentation: Mining for Equity"
     - name: "11:40 - 11:55 Group Presentation: The Storm"
     - name: "12:00 - 1:30 Lunch Break and Optional Small Group Networking"
     - name: "1:40 - 1:55 Group Presentation: The TikTok Group"
