--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -97,7 +97,18 @@
     - name: "10:00 - 10:30 Institute Introduction and logistics (*Zoom*) [(video)](https://youtu.be/psQlBLbDQ58) "
     - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md) (*Zoom*) [(video)](https://youtu.be/KTBov0oin_w)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 "Getting the most out of your SICSS experience" - Roundtable discussion with SICSS alums of color  (*Zoom*) [(video)](https://youtu.be/Amp5OUV9h4Q) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '12:00 - 1:00 "Getting the most out of your SICSS experience" - Roundtable discussion with SICSS alums of color  (*Zoom*) [(video)](https://youtu.be/Amp5OUV9h4Q) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    
+       - Jae Yeon Kim (SICSS-Princeton 2019, organizer of SICSS-Bay Area 2020)
+     
+       - Zanele Munyikwa (SICSS-Duke 2018)
+     
+       - Demetrius Murphy (SICSS-Duke 2020)
+     
+       - Malebo Sephodi (SICSS-Stellenbosch 2020)
+     
+       - Naniette Coleman (SICSS-Princeton 2019, organizer of SICSS-Howard/Mathematica 2021)'
+       
     - name: "1:00 - 1:30 Break"
     - name: "1:30 - 1:45 Introduction to the group exercise [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_instructor.md) (*Zoom*) [(video)](https://youtu.be/Mv4syN26MOQ)"
     - name: "1:45 - 2:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
